Fix header h2 align left

--- a/css/style.css
+++ b/css/style.css
@@ -488,6 +488,7 @@ footer {
 		margin-bottom:5px;
 		font-size:1.2em;
 		letter-spacing: 0.15em;
+		text-align:left;
 	}
 
 	section, section.card {
